--- a/FirstApp/app/src/main/res/layout/fragment_lost_animals.xml
+++ b/FirstApp/app/src/main/res/layout/fragment_lost_animals.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".bottomNavFragments.LostAnimalsFragment"
     android:orientation="vertical"
+    android:layout_below="@+id/topBar"
+    android:layout_marginTop="78dp"
     android:layout_above="@+id/bottomNavigationView"
     android:layout_marginBottom="125dp"
     >
