--- a/FirstApp/app/src/main/res/layout/fragment_user_profile.xml
+++ b/FirstApp/app/src/main/res/layout/fragment_user_profile.xml
@@ -6,7 +6,9 @@
     tools:context=".bottomNavFragments.UserProfileFragment"
     android:orientation="vertical"
     android:layout_above="@+id/bottomNavigationView"
-    android:layout_marginBottom="125dp">
+    android:layout_marginBottom="125dp"
+    android:layout_below="@+id/topBar"
+    android:layout_marginTop="78dp">
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
@@ -23,7 +25,7 @@
         android:id="@+id/recyclerview2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         />
 
 </FrameLayout>
