--- a/FirstApp/app/src/main/res/layout/activity_sign_up.xml
+++ b/FirstApp/app/src/main/res/layout/activity_sign_up.xml
@@ -7,13 +7,30 @@
     android:id="@+id/main_container"
     tools:context=".registration.SignUp">
 
+
     <FrameLayout
         android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent">
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/topBar"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Light"
+            >
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/main_toolbar"
+            android:layout_width="match_parent"
+            android:layout_marginTop="8dp"
+            android:layout_height="?attr/actionBarSize"
+            app:titleTextColor="@color/white"
+            />
+        </com.google.android.material.appbar.AppBarLayout>
+    </FrameLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
