--- a/FirstApp/app/src/main/res/layout/fragment_sign_up.xml
+++ b/FirstApp/app/src/main/res/layout/fragment_sign_up.xml
@@ -4,18 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/main_container"
-    tools:context=".registration.SignUp">
+    tools:context=".registration.regFragments.SignUpFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.4">
+
 
         <TextView
             android:id="@+id/textView"
@@ -24,13 +15,23 @@
             android:fontFamily="@font/poppinsbold"
             android:gravity="center"
             android:text="@string/Signup"
-            android:textColor="@color/green"
+            android:textColor="@color/greenHard"
             android:textSize="30sp"
+            android:layout_marginTop="100dp"
+            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutFullname"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:targetApi="jelly_bean" />
+            app:layout_constraintVertical_bias="0.356" />
+    <TextView
+        android:id="@+id/displayAlert"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+
+       />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayoutFullname"
@@ -158,17 +159,5 @@
             tools:targetApi="jelly_bean" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.222" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
