--- a/FirstApp/app/src/main/res/menu/top_menu.xml
+++ b/FirstApp/app/src/main/res/menu/top_menu.xml
@@ -7,7 +7,13 @@
         android:icon="@drawable/ic_search_black_24dp"
         android:title="Search"
         app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="always" />
-    <item android:title="Edit Profile" />
-    <item android:title="Log Out" />
+        app:showAsAction="always"
+        />
+    <item
+        android:id="@+id/editProfile"
+        android:title="Edit Profile"
+        />
+    <item
+        android:id="@+id/logout"
+        android:title="Log Out" />
 </menu>
