--- a/FirstApp/app/src/main/res/values/colors.xml
+++ b/FirstApp/app/src/main/res/values/colors.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="green">#83CD86</color>
-    <color name="purple_500">#2eb7ed</color>
+    <color name="green">#f0a04b</color>
+    <color name="beige">#fefbe9</color>
+    <color name="greenHard">#204D26</color>
+    <color name="greenSplash">#1db593</color>
+    <color name="orange">#f6c543</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="blue">#FE6865</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#DDDADA</color>
 </resources>
