--- a/FirstApp/app/src/main/res/layout/fragment_sign_up.xml
+++ b/FirstApp/app/src/main/res/layout/fragment_sign_up.xml
@@ -15,7 +15,7 @@
             android:fontFamily="@font/poppinsbold"
             android:gravity="center"
             android:text="@string/Signup"
-            android:textColor="@color/greenHard"
+            android:textColor="@color/green"
             android:textSize="30sp"
             android:layout_marginTop="100dp"
             app:layout_constraintBottom_toTopOf="@+id/textInputLayoutFullname"
@@ -124,6 +124,17 @@
                 tools:targetApi="jelly_bean" />
         </com.google.android.material.textfield.TextInputLayout>
 
+    <CheckBox android:id="@+id/checkbox_true"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:hint="Create a dog walker profile"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"/>
+
+
         <ProgressBar
             android:id="@+id/progress"
             android:layout_width="wrap_content"
@@ -131,7 +142,7 @@
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />
+            app:layout_constraintTop_toBottomOf="@+id/checkbox_true" />
 
         <Button
             android:id="@+id/buttonSignUp"
