--- a/FirstApp/app/src/main/res/layout/fragment_walkers.xml
+++ b/FirstApp/app/src/main/res/layout/fragment_walkers.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/lostAnimals"
+    android:id="@+id/walkers"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".bottomNavFragments.LostAnimalsFragment"
+    tools:context=".WalkersFragment"
     android:orientation="vertical"
     android:layout_below="@+id/topBar"
     android:layout_marginTop="78dp"
@@ -16,7 +16,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
+        android:id="@+id/recyclerview3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
