--- a/FirstApp/app/src/main/res/menu/top_menu.xml
+++ b/FirstApp/app/src/main/res/menu/top_menu.xml
@@ -10,7 +10,7 @@
         app:showAsAction="always"
         />
     <item
-        android:id="@+id/editProfile"
+        android:id="@+id/editProfileNotis"
         android:title="Edit Profile"
         />
     <item
