--- a/FirstApp/app/src/main/res/layout/fragment_user_profile.xml
+++ b/FirstApp/app/src/main/res/layout/fragment_user_profile.xml
@@ -8,7 +8,7 @@
     android:layout_above="@+id/bottomNavigationView"
     android:layout_marginBottom="125dp"
     android:layout_below="@+id/topBar"
-    android:layout_marginTop="78dp">
+   >
 
 
     <!-- TODO: Update blank fragment layout -->
@@ -18,5 +18,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         />
+    <TextView
+        android:id="@+id/emptyAnimals"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="200dp"
+        android:textSize="20sp"/>
 
 </FrameLayout>
