--- a/FirstApp/app/src/main/res/layout/walkers_list.xml
+++ b/FirstApp/app/src/main/res/layout/walkers_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="250dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     app:cardCornerRadius="10dp"
@@ -9,53 +9,44 @@
     app:cardUseCompatPadding="true"
     app:cardBackgroundColor="@color/beige"
     android:layout_gravity="center"
-
+    app:strokeColor="@color/redish"
+    app:strokeWidth="4dp"
     >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:padding="10dp">
 
         <ImageView
             android:id="@+id/walkerImage"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="5dp"
-            android:foreground="@drawable/rounded_fg"
-            android:src="@drawable/ic_dog_in_front_of_a_man_svgrepo_com" />
-
-        <ImageView
-            android:id="@+id/locationIcon"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/ic_open" />
-
+            android:foreground="@drawable/rounded_fg"
+            android:src="@drawable/ic_dog_in_front_of_a_man_svgrepo_com"
+            android:layout_below="@+id/walkerName"
+            />
 
         <TextView
             android:id="@+id/walkerName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:layout_marginLeft="15dp"
-            android:layout_toEndOf="@id/walkerImage"
-            android:layout_toRightOf="@+id/walkerImage"
             android:text="Johny"
             android:textColor="@color/black"
             android:textSize="19sp" />
 
 
         <TextView
-            android:id="@+id/walkerLocation"
+            android:id="@+id/walkerLocationCity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/walkerName"
-            android:layout_marginLeft="15dp"
+            android:layout_below="@+id/walkerImage"
             android:layout_marginTop="10dp"
-            android:layout_toEndOf="@id/walkerImage"
+            android:layout_marginLeft="15dp"
             android:text="Barcelona"
             android:textColor="@color/black"
             android:textSize="12sp" />
