--- a/FirstApp/app/src/main/res/menu/bottom_menu.xml
+++ b/FirstApp/app/src/main/res/menu/bottom_menu.xml
@@ -7,9 +7,9 @@
 
         />
 
-    <item android:id="@+id/search"
+    <item android:id="@+id/notifications"
         android:title="Search"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/ic_notifications"
         />
     <item android:id="@+id/placeholder"
         android:enabled="false"
